--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -7,4 +7,11 @@
         android:orderInCategory="100"
         android:title="@string/action_add_sample_data"
         app:showAsAction="never" />
+
+    <item
+        android:id="@+id/action_add_delete_all"
+        android:orderInCategory="101"
+        android:title="@string/action_delete_all"
+        app:showAsAction="never" />
+
 </menu>
