--- a/app/src/main/res/menu/menu_edit.xml
+++ b/app/src/main/res/menu/menu_edit.xml
@@ -2,9 +2,12 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="com.marcinmejner.notki.EditorScreen.EditActivity">
+
+
     <item
-        android:id="@+id/action_add_sample_data"
+        android:id="@+id/menu_save_data"
         android:orderInCategory="100"
         android:title="Set"
-        app:showAsAction="never" />
+        android:icon="@drawable/ic_check"
+        app:showAsAction="always" />
 </menu>
