commit 18 dodana edycja i usuwanie notki

--- a/app/src/main/res/menu/menu_edit.xml
+++ b/app/src/main/res/menu/menu_edit.xml
@@ -10,4 +10,11 @@
         android:title="Set"
         android:icon="@drawable/ic_check"
         app:showAsAction="always" />
+
+    <item
+        android:id="@+id/menu_delete_item"
+        android:orderInCategory="100"
+        android:title="Set"
+        android:icon="@drawable/ic_delete"
+        app:showAsAction="always" />
 </menu>
